--- a/assignments/assignment04-wthueb/History.text
+++ b/assignments/assignment04-wthueb/History.text
@@ -1,51 +1,51 @@
 History
-1 Randall Woodward
-3 Byron Harris
-5 Jessie Costa
-7 Lance Cunningham
-9 Alan Campbell
-11 Rodney Maynard
-13 Glenn Parks
-15 Wallace Bradshaw
-17 Glen Mendoza
-19 Darrell Shepard
-21 Glenn Christian
-23 Luis Short
-25 Tommy Atkinson
-27 Francisco West
-29 Raymond Schneider
-31 Marc Cross
-33 Jason Padilla
-35 Lester Murray
-37 Theodore Arnold
-39 Bradley Burns
-41 Christian Mendoza
-43 Lawrence Buck
-45 Christopher Duncan
-47 Andre Cox
-49 Brett Dudley
-51 Alex Pollard
-53 Raul Fernandez
-55 Albert Mccall
-57 Stanley Ryan
-59 Raul Holland
-61 Clayton Patrick
-63 Albert Andersen
-65 Victor Hayes
-67 Tony Mckay
-69 Chris Marks
-71 Vernon Sutton
-73 Herbert Mcfarland
-75 Alfred O'Connell
-77 Marcus Merritt
-79 Dwight Schroeder
-81 Dustin Barron
-83 Steve Lucas
-85 Cecil Mora
-87 Leon Nixon
-89 Floyd Parrish
-91 Enrique Williamson
-93 Gary Ali
-95 Jamie Kemp
-97 George Gray
-99 Allan Mcbride
+1 Dan Pham
+3 Derek Vasquez
+5 Ian Snyder
+7 Eddie Finley
+9 Leroy Holden
+11 Billy Hunter
+13 Leslie Stephenson
+15 Felix Burton
+17 Seth Tapia
+19 Armando Montes
+21 Kent Cohen
+23 Kyle Burton
+25 Harvey Barajas
+27 Eugene Jarvis
+29 Clifford Chaney
+31 Jonathan Ferguson
+33 Javier Huber
+35 Alfredo Daniel
+37 Andre Reeves
+39 Harvey Riley
+41 Pedro Barker
+43 Casey Pierce
+45 Russell Butler
+47 Albert Phillips
+49 Carlos Coffey
+51 Eugene Rosales
+53 Victor Palmer
+55 Daryl Watson
+57 Samuel Carson
+59 Steve Johns
+61 Jimmy Morton
+63 Chris Cardenas
+65 Zachary Mayo
+67 Albert Page
+69 Douglas Caldwell
+71 Tyler Randolph
+73 Mario Barry
+75 Philip Romero
+77 Andre Hogan
+79 Andre Howell
+81 Rodney Roy
+83 Willie James
+85 Douglas Peters
+87 Bobby Holland
+89 Angel Mays
+91 Aaron Ford
+93 Rodney Alexander
+95 Jason Shelton
+97 Bruce Johnson
+99 Eddie Sweeney
