--- a/assignments/assignment04-wthueb/History.text
+++ b/assignments/assignment04-wthueb/History.text
@@ -1,51 +1,51 @@
 History
-1 Dan Pham
-3 Derek Vasquez
-5 Ian Snyder
-7 Eddie Finley
-9 Leroy Holden
-11 Billy Hunter
-13 Leslie Stephenson
-15 Felix Burton
-17 Seth Tapia
-19 Armando Montes
-21 Kent Cohen
-23 Kyle Burton
-25 Harvey Barajas
-27 Eugene Jarvis
-29 Clifford Chaney
-31 Jonathan Ferguson
-33 Javier Huber
-35 Alfredo Daniel
-37 Andre Reeves
-39 Harvey Riley
-41 Pedro Barker
-43 Casey Pierce
-45 Russell Butler
-47 Albert Phillips
-49 Carlos Coffey
-51 Eugene Rosales
-53 Victor Palmer
-55 Daryl Watson
-57 Samuel Carson
-59 Steve Johns
-61 Jimmy Morton
-63 Chris Cardenas
-65 Zachary Mayo
-67 Albert Page
-69 Douglas Caldwell
-71 Tyler Randolph
-73 Mario Barry
-75 Philip Romero
-77 Andre Hogan
-79 Andre Howell
-81 Rodney Roy
-83 Willie James
-85 Douglas Peters
-87 Bobby Holland
-89 Angel Mays
-91 Aaron Ford
-93 Rodney Alexander
-95 Jason Shelton
-97 Bruce Johnson
-99 Eddie Sweeney
+1 Jesse Wood
+3 Bruce Parrish
+5 Lloyd Krause
+7 Edwin Fry
+9 Roger Travis
+11 Patrick Sawyer
+13 Lewis Bradshaw
+15 David Drake
+17 Eric Lara
+19 Barry Stephenson
+21 Ricky Anthony
+23 Antonio Meyers
+25 Miguel Rocha
+27 Ralph Krueger
+29 Gary Huynh
+31 Kevin Dyer
+33 Earl Cherry
+35 Randall Garrett
+37 Leon Gould
+39 Marcus Mercer
+41 Clifford Bautista
+43 Sergio Gardner
+45 Roy Sullivan
+47 Gregory Golden
+49 Antonio Walker
+51 Chester Park
+53 Jack Vance
+55 Henry Hernandez
+57 Julian Colon
+59 Danny Knight
+61 Norman Avery
+63 Marc Blevins
+65 Pedro Shelton
+67 Dwayne Poole
+69 Tim Massey
+71 Steve Woodward
+73 Tracy Norman
+75 Sean Erickson
+77 Martin Merritt
+79 Sidney Cannon
+81 Jessie Wyatt
+83 Corey Brown
+85 Tracy Benitez
+87 Paul Townsend
+89 Jordan Keith
+91 Steve Richmond
+93 Perry Silva
+95 Maurice Macias
+97 Arnold Morrow
+99 Mitchell Barber
